(Bug 5073) Adjust styling of bullet points in tables
list-style-position: inside was causing issues with the table cell being
too narrow in chrome

--- a/htdocs/scss/components/tables.scss
+++ b/htdocs/scss/components/tables.scss
@@ -12,5 +12,9 @@ th[scope="row"] {
 }
 
 table ul {
-    list-style-position: inside;
+    // so that the bullet points don't spill out of the table cell
+    // `list-style-position: inside` causes issues in chrome
+    //      the table cell is too narrow (possibly same width allocated as
+    //      if it was list-style-position: outside)
+    margin-left: 1em;
 }
